[metadata]
name = tf-hourglass-networks
author = Benjamin Schmidt
author-email = hello@benjs.de
summary = Train hourglass neural networks via tensorflow keras.
description-file = README.md
description-content-type = text/markdown
license = Apache-2
requires-python = >=3.8
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Development Status :: 4 - Beta
    Environment :: GPU :: NVIDIA CUDA

[files]
packages =
    hourglass

[pbr]
skip_changelog = True
skip_authors = True
